# RPC_under_hpc

./: CMakeLists.txt
example/callee/: CMakeLists.txt  friendservice.cpp  userservice.cpp
example/caller/: CMakeLists.txt  callfriendservice.cpp  calluserservice.cpp
include/: mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  mprpcprovider.h
include/phoenix/: CMakeLists.txt  README.md  bytearray.h  fd_manager.cc  iomanager.cc  macro.h  mutex.h  scheduler.cc  singleton.h  socket.h  stream.cc  thread.cc
include/phoenix/cmake/: utils.cmake
include/phoenix/phoenix/: address.cc  address.h  bytearray.cc  endian.h  env.cc  env.h  fd_manager.h  fiber.cc  fiber.h  hook.cc  hook.h  iomanager.h  log.cpp  log.h  mutex.cc  noncopyable.h  phoenix.h  scheduler.h  socket.cc  stream.h  tcp_server.cc  tcp_server.h  thread.h  timer.cc  timer.h
src/: mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  mprpcprovider.cpp  rpcheader.proto  zookeeperutils.cpp
